Material You redesign base * Bottom nav panel and search redesign * Light theme by default * Removed shadows, separators, dark actionbar & statusbar options

--- a/gui/theme/portrait_hdpi/pages/templates/base.xml
+++ b/gui/theme/portrait_hdpi/pages/templates/base.xml
@@ -9,22 +9,6 @@
 		</template>
 
         <template name="tabs">
-			<fill color="%title_solid_bg%">
-				<condition var1="darker_ui" var2="1"/>
-				<placement x="0" y="0" w="%screen_w%" h="%tab_title_h%"/>
-			</fill>
-
-			<image>
-				<image resource="actionbar_shadow"/>
-				<condition var1="show_shadow" var2="1"/>
-				<placement x="0" y="%tab_title_h%"/>
-			</image>
-			
-			<fill color="%linecolor%">
-				<condition var1="show_shadow" var2="2"/>
-				<placement x="0" y="%tab_title_h%" w="1080" h="2"/>
-			</fill>
-
 			<template name="status_bg"/>
 			<template name="statusbarinfo"/>
 		</template>
@@ -119,14 +103,39 @@
 
         <template name="base_nav_basic">
 			<template name="statusbarinfo"/>
-			<fill color="%title_solid_bg%">
-				<condition var1="darker_ui" var2="1"/>
-				<placement x="0" y="%nav_panel_y%" w="%screen_w%" h="%nav_panel_h%"/>
+			<fill color="%cards_bg%" radius="36">
+				<placement x="%nav_panel_x%" y="%nav_panel_y%" w="%nav_panel_w%" h="%nav_panel_h%"/>
+			</fill>
+
+			<fill color="%accent%" radius="-1">
+				<condition var1="nav_panel_id" var2="0"/>
+				<placement x="%np_pill_x1%" y="%np_pill_y%" w="%np_pill_w%" h="%np_pill_h%"/>
+			</fill>
+
+			<fill color="%accent%" radius="-1">
+				<condition var1="nav_panel_id" var2="1"/>
+				<placement x="%np_pill_x2%" y="%np_pill_y%" w="%np_pill_w%" h="%np_pill_h%"/>
+			</fill>
+
+			<fill color="%accent%" radius="-1">
+				<condition var1="nav_panel_id" var2="2"/>
+				<placement x="%np_pill_x3%" y="%np_pill_y%" w="%np_pill_w%" h="%np_pill_h%"/>
+			</fill>
+
+			<fill color="%accent%" radius="-1">
+				<condition var1="nav_panel_id" var2="3"/>
+				<placement x="%np_pill_x4%" y="%np_pill_y%" w="%np_pill_w%" h="%np_pill_h%"/>
 			</fill>
 			
 			<image>
-				<image resource="nav_files"/>
 				<condition var1="nav_panel_id" var2="0"/>
+				<image resource="nav_files"/>
+				<placement x="%nav_item_1%" y="%nav_icon_y%" placement="4"/>
+			</image>
+			
+			<image>
+				<condition var1="nav_panel_id" op="!=" var2="0"/>
+				<image resource="nav_files_d"/>
 				<placement x="%nav_item_1%" y="%nav_icon_y%" placement="4"/>
 			</image>
 			
@@ -136,23 +145,8 @@
 				<text>{@file_manager_btn}</text>
 			</text>
 			
-			<image>
-				<image resource="nav_files_d"/>
-				<condition var1="nav_panel_id" op="!=" var2="0"/>
-				<condition var1="new_nav_panel_des" var2="0"/>
-				<placement x="%nav_item_1%" y="%nav_icon_y%" placement="4"/>
-			</image>
-
-			<image>
-				<image resource="nav_files_d"/>
-				<condition var1="nav_panel_id" op="!=" var2="0"/>
-				<condition var1="new_nav_panel_des" var2="1"/>
-				<placement x="%nav_item_1%" y="%nav_icon_a_y%" placement="4"/>
-			</image>
-			
 			<text style="nav_panel_d">
 				<condition var1="nav_panel_id" op="!=" var2="0"/>
-				<condition var1="new_nav_panel_des" var2="0"/>
 				<placement x="%nav_item_1%" y="%nav_text_y%" placement="4"/>
 				<text>{@file_manager_btn}</text>
 			</text>
@@ -172,31 +166,22 @@
 			</button>
 			
 			<image>
-				<image resource="nav_backup_d"/>
-				<condition var1="nav_panel_id" op="!=" var2="1"/>
-				<condition var1="new_nav_panel_des" var2="0"/>
+				<condition var1="nav_panel_id" var2="1"/>
+				<image resource="nav_backup"/>
 				<placement x="%nav_item_2%" y="%nav_icon_y%" placement="4"/>
 			</image>
-
+			
 			<image>
-				<image resource="nav_backup_d"/>
 				<condition var1="nav_panel_id" op="!=" var2="1"/>
-				<condition var1="new_nav_panel_des" var2="1"/>
-				<placement x="%nav_item_2%" y="%nav_icon_a_y%" placement="4"/>
+				<image resource="nav_backup_d"/>
+				<placement x="%nav_item_2%" y="%nav_icon_y%" placement="4"/>
 			</image>
 			
 			<text style="nav_panel_d">
 				<condition var1="nav_panel_id" op="!=" var2="1"/>
-				<condition var1="new_nav_panel_des" var2="0"/>
 				<placement x="%nav_item_2%" y="%nav_text_y%" placement="4"/>
 				<text>{@backup_btn}</text>
 			</text>
-			
-			<image>
-				<image resource="nav_backup"/>
-				<condition var1="nav_panel_id" var2="1"/>
-				<placement x="%nav_item_2%" y="%nav_icon_y%" placement="4"/>
-			</image>
 			
 			<text style="nav_panel">
 				<condition var1="nav_panel_id" var2="1"/>
@@ -212,31 +197,22 @@
 			</button>
 			
 			<image>
-				<image resource="nav_wipe_d"/>
-				<condition var1="nav_panel_id" op="!=" var2="2"/>
-				<condition var1="new_nav_panel_des" var2="0"/>
+				<condition var1="nav_panel_id" var2="2"/>
+				<image resource="nav_wipe"/>
 				<placement x="%nav_item_3%" y="%nav_icon_y%" placement="4"/>
 			</image>
-
+			
 			<image>
-				<image resource="nav_wipe_d"/>
 				<condition var1="nav_panel_id" op="!=" var2="2"/>
-				<condition var1="new_nav_panel_des" var2="1"/>
-				<placement x="%nav_item_3%" y="%nav_icon_a_y%" placement="4"/>
+				<image resource="nav_wipe_d"/>
+				<placement x="%nav_item_3%" y="%nav_icon_y%" placement="4"/>
 			</image>
 			
 			<text style="nav_panel_d">
 				<condition var1="nav_panel_id" op="!=" var2="2"/>
-				<condition var1="new_nav_panel_des" var2="0"/>
 				<placement x="%nav_item_3%" y="%nav_text_y%" placement="4"/>
 				<text>{@wipe_btn}</text>
 			</text>
-			
-			<image>
-				<image resource="nav_wipe"/>
-				<condition var1="nav_panel_id" var2="2"/>
-				<placement x="%nav_item_3%" y="%nav_icon_y%" placement="4"/>
-			</image>
 			
 			<text style="nav_panel">
 				<condition var1="nav_panel_id" var2="2"/>
@@ -252,31 +228,22 @@
 			</button>
 			
 			<image>
-				<image resource="nav_menu_d"/>
-				<condition var1="nav_panel_id" op="!=" var2="3"/>
-				<condition var1="new_nav_panel_des" var2="0"/>
+				<condition var1="nav_panel_id" var2="3"/>
+				<image resource="nav_menu"/>
 				<placement x="%nav_item_4%" y="%nav_icon_y%" placement="4"/>
 			</image>
-
+			
 			<image>
-				<image resource="nav_menu_d"/>
 				<condition var1="nav_panel_id" op="!=" var2="3"/>
-				<condition var1="new_nav_panel_des" var2="1"/>
-				<placement x="%nav_item_4%" y="%nav_icon_a_y%" placement="4"/>
+				<image resource="nav_menu_d"/>
+				<placement x="%nav_item_4%" y="%nav_icon_y%" placement="4"/>
 			</image>
 			
 			<text style="nav_panel_d">
 				<condition var1="nav_panel_id" op="!=" var2="3"/>
-				<condition var1="new_nav_panel_des" var2="0"/>
 				<placement x="%nav_item_4%" y="%nav_text_y%" placement="4"/>
 				<text>{@menu_btn}</text>
 			</text>
-			
-			<image>
-				<image resource="nav_menu"/>
-				<condition var1="nav_panel_id" var2="3"/>
-				<placement x="%nav_item_4%" y="%nav_icon_y%" placement="4"/>
-			</image>
 			
 			<text style="nav_panel">
 				<condition var1="nav_panel_id" var2="3"/>
@@ -290,17 +257,6 @@
 				<image resource="nav_empty" highlightresource="nav_hl"/>
 				<action function="page">advanced</action>
 			</button>
-			
-			<image>
-				<condition var1="show_shadow" var2="1"/>
-				<placement x="0" y="%nav_panel_y%" placement="2"/>
-				<image resource="nav_shadow"/>
-			</image>
-			
-			<fill color="%linecolor%">
-				<condition var1="show_shadow" var2="2"/>
-				<placement x="0" y="%nav_panel_y%" w="1080" h="2"/>
-			</fill>
 
 			
 			<template name="navbar_bkg_nobg"/>
@@ -361,21 +317,11 @@
 		<template name="body_ct">
 			<background color="%background%"/>
 			<template name="keys"/>
-
-			<fill color="%title_solid_bg%">
-				<placement x="0" y="0" w="%screen_w%" h="%ab_ex_h%"/>
-			</fill>
-
 			<template name="statusbarinfo"/>
 		</template>
         
         <!-- Basic UI elements -->
-        <template name="status_bg">
-			<fill color="%status_solid_bg%">
-				<condition var1="separate_status" var2="1"/>
-				<placement x="0" y="0" w="%screen_w%" h="%status_h%"/>
-			</fill>
-			
+        <template name="status_bg">			
 			<fill color="#000000">
 				<condition var1="hide_notch" var2="1"/>
 				<placement x="0" y="0" w="%screen_w%" h="%status_h%"/>
@@ -407,22 +353,6 @@
         
         <!-- Headers -->
         <template name="ab_main">
-			<image>
-				<condition var1="show_shadow" var2="1"/>
-				<image resource="actionbar_shadow"/>
-				<placement x="0" y="%ab_h%"/>
-			</image>
-			
-			<fill color="%linecolor%">
-				<condition var1="show_shadow" var2="2"/>
-				<placement x="0" y="%ab_h%" w="1080" h="2"/>
-			</fill>
-			
-			<fill color="%title_solid_bg%">
-				<condition var1="darker_ui" var2="1"/>
-				<placement x="0" y="0" w="%screen_w%" h="%ab_h%"/>
-			</fill>
-			
 			<template name="status_bg"/>
 		</template>
 
@@ -432,22 +362,6 @@
 		</template>
 		
 		<template name="ab_ex">
-			<image>
-				<condition var1="show_shadow" var2="1"/>
-				<image resource="actionbar_shadow"/>
-				<placement x="0" y="%ab_ex_h%"/>
-			</image>
-			
-			<fill color="%title_solid_bg%">
-				<condition var1="darker_ui" var2="1"/>
-				<placement x="0" y="0" w="%screen_w%" h="%ab_ex_h%"/>
-			</fill>
-			
-			<fill color="%linecolor%">
-				<condition var1="show_shadow" var2="2"/>
-				<placement x="0" y="%ab_ex_h%" w="1080" h="2"/>
-			</fill>
-			
 			<template name="status_bg"/>
 			<template name="actionbar_back"/>
 		</template>
@@ -481,15 +395,8 @@
 
 		<template name="actionbar_storage">
 			<button style="actionbar">
-				<condition var1="darker_ui" op="!=" var2="1"/>
 				<placement x="%ab_btn2_x%" y="%ab_y%" placement="4"/>
 				<action function="page">select_path</action>
-			</button>
-			
-			<button style="actionbar">
-				<condition var1="darker_ui" var2="1"/>
-				<placement x="%ab_btn2_x%" y="%ab_y%" placement="4"/>
-				<action function="page">select_path_dark</action>
 			</button>
 
 			<image>
@@ -517,19 +424,6 @@
 				<data name="tw_storage_path"/>
 				<listtype name="storage"/>
 			</partitionlist>
-
-			<image>
-				<condition var1="of_show_storage_selection" var2="1"/>
-				<condition var1="show_shadow" var2="1"/>
-				<image resource="actionbar_shadow"/>
-				<placement x="0" y="%modern_storage_shadow_y%"/>
-			</image>
-			
-			<fill color="%linecolor%">
-				<condition var1="of_show_storage_selection" var2="1"/>
-				<condition var1="show_shadow" var2="2"/>
-				<placement x="0" y="%modern_storage_shadow_y%" w="1080" h="2"/>
-			</fill>
 
 			<fill color="%linecolor%">
 				<condition var1="of_show_storage_selection" var2="1"/>
