--- a/gui/theme/portrait_hdpi/pages/templates/base.xml
+++ b/gui/theme/portrait_hdpi/pages/templates/base.xml
@@ -71,7 +71,7 @@
 
 			<button style="btn_raised_hl">
 				<condition var1="tw_reboot_system" var2="1"/>
-				<placement x="%btn_raised_right_x%" y="%row_btn1_y%" placement="1"/>
+				<placement x="%btn_raised_right_x%" y="%row_btn1_y%" w="%btn_w%" h="%btn_h%" placement="1"/>
 				<text>{@reboot_system_btn}</text>
 				<action function="set">tw_back=main</action>
 				<action function="set">tw_action_param=system</action>
@@ -157,17 +157,15 @@
 				<text>{@file_manager_btn}</text>
 			</text>
 			
-			<button>
+			<button style="nav_panel_btn">
 				<condition var1="nav_panel_id" var2="0"/>
-				<placement x="%nav_item_1%" y="%nav_item_y%" placement="4"/>
-				<image resource="nav_empty" highlightresource="nav_hl"/>
+				<placement x="%nav_item_1%" y="%nav_item_y%" w="%nav_item_w%" h="%nav_panel_h%" placement="4"/>
 				<action function="page">menu</action>
 			</button>
 			
-			<button>
+			<button style="nav_panel_btn">
 				<condition var1="nav_panel_id" op="!=" var2="0"/>
-				<placement x="%nav_item_1%" y="%nav_item_y%" placement="4"/>
-				<image resource="nav_empty" highlightresource="nav_hl"/>
+				<placement x="%nav_item_1%" y="%nav_item_y%" w="%nav_item_w%" h="%nav_panel_h%" placement="4"/>
 				<action function="page">filemanagerlist</action>
 			</button>
 			
@@ -195,10 +193,9 @@
 				<text>{@backup_btn}</text>
 			</text>
 			
-			<button>
-				<placement x="%nav_item_2%" y="%nav_item_y%" placement="4"/>
+			<button style="nav_panel_btn">
+				<placement x="%nav_item_2%" y="%nav_item_y%" w="%nav_item_w%" h="%nav_panel_h%" placement="4"/>
 				<condition var1="nav_panel_id" op="!=" var2="1"/>
-				<image resource="nav_empty" highlightresource="nav_hl"/>
 				<action function="page">restore</action>
 			</button>
 			
@@ -226,10 +223,9 @@
 				<text>{@wipe_btn}</text>
 			</text>
 			
-			<button>
+			<button style="nav_panel_btn">
 				<condition var1="nav_panel_id" op="!=" var2="2"/>
-				<placement x="%nav_item_3%" y="%nav_item_y%" placement="4"/>
-				<image resource="nav_empty" highlightresource="nav_hl"/>
+				<placement x="%nav_item_3%" y="%nav_item_y%" w="%nav_item_w%" h="%nav_panel_h%" placement="4"/>
 				<action function="page">wipe</action>
 			</button>
 			
@@ -257,10 +253,9 @@
 				<text>{@menu_btn}</text>
 			</text>
 			
-			<button>
+			<button style="nav_panel_btn">
 				<condition var1="nav_panel_id" op="!=" var2="3"/>
-				<placement x="%nav_item_4%" y="%nav_item_y%" placement="4"/>
-				<image resource="nav_empty" highlightresource="nav_hl"/>
+				<placement x="%nav_item_4%" y="%nav_item_y%" w="%nav_item_w%" h="%nav_panel_h%" placement="4"/>
 				<action function="page">advanced</action>
 			</button>
 
@@ -440,7 +435,7 @@
         <!-- Action pages -->
         <template name="back_btn">
 			<button style="btn_raised">
-				<placement x="%btn_raised_left_x%" y="%row_btn1_y%"/>
+				<placement x="%btn_raised_left_x%" y="%row_btn1_y%" w="%btn_w%" h="%btn_h%"/>
 				<text>{@back_btn}</text>
 				<action function="key">back</action>
 			</button>
